# what_inside

./: .clang-format  CMakeLists.txt  conanfile.txt
src/: color.cpp  color.h  main.cpp
